# pqiv

./: GNUmakefile  Makefile  README  README.markdown  config.h.in  configure  generate_desktop.py  meson.build  meson.options  pqiv.1  pqiv.1.template  pqiv.c  pqiv.h  pqiv.py  qiv.1
.github/workflows/: ci.yml
backends/: archive.c  archive.mime  archive_cbx.c  archive_cbx.mime  gdkpixbuf.c  gdkpixbuf.mime  generate_initializer.py  gmwand.c  gmwand.mime  libav.c  libav.mime  libwebp.c  meson.build  poppler.c  poppler.mime  shared-initializer.c  spectre.c  spectre.mime  wand.c  webp.c  webp.mime
lib/: bostree.c  bostree.h  config_parser.c  config_parser.h  filebuffer.c  filebuffer.h  strnatcmp.c  thumbnailcache.c  thumbnailcache.h  update.sh
